cambios de cartelera para mostrar las pelicular y el modificar el header

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-textdirection="ltr" style="--vh: 2.72px;">
 <head>
   <meta charset="utf-8">
   <title>TareaCineAngular</title>
@@ -11,7 +11,7 @@
         rel="stylesheet">
 
 </head>
-<body class="vertical-layout vertical-menu-modern navbar-floating footer-static" data-open="click" data-menu="vertical-menu-modern" data-col="">
+<body class="navbar-floating footer-static header-only">
   <app-root></app-root>
 </body>
 </html>
